<?xml version="1.0" encoding="utf-8"?>
    
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" 
	    android:orientation="vertical"
	    android:id="@+id/login_fragment_id">
	    <TextView 
	        android:id="@+id/loginBoxTextId"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:textColor="@color/blue"
				
			android:textSize="20sp"
			android:layout_margin="10dip"
			android:text="@string/pleazlogin_string"/>
	    	    
		<LinearLayout 
		    android:id="@+id/loginBoxLayoutId"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" 
		    android:orientation="vertical"
		    android:background="@color/icedWhite"
		    android:layout_margin="10dip"
		    >
	    	
		    <EditText
		        android:id="@+id/usernameEditTextId"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		
				android:layout_margin="10dip"
				android:padding="10dip"
		
		        android:ems="14" 
		        android:hint="@string/username_string"
		        android:background="@color/icedWhite">
		
		        <requestFocus />
		    </EditText>
		
		    <EditText
		        android:id="@+id/passwordEditTextId"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/password_string"
		
				android:layout_margin="10dip"
				android:padding="10dip"
		
		        android:ems="14"
		        android:background="@color/icedWhite"
		        android:inputType="textPassword" />

		    
		    
		    		
		    <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" 
			    android:orientation="horizontal">
			    <Button
			        android:id="@+id/cancelButtonId"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
					android:layout_weight="1"
					android:layout_margin="10dip"
			        android:text="cancel" />
			    
			    
			    <Button
			        android:id="@+id/loginButtonId"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
					android:layout_weight="1"
			
					android:layout_margin="10dip"
			        android:text="@string/login_string" />
			</LinearLayout>
	
	    </LinearLayout>
	</LinearLayout>
